[package]
name = "configcrunch"
version = "1.0.0"
authors = ["Marco Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/theCapypara/configcrunch"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "configcrunch"

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"
minijinja = { git = "https://github.com/theCapypara/minijinja.git", "branch" = "configcrunch" }
path-absolutize = "3"

[dev-dependencies]
maplit = "1"