[package]
name = "configcrunch"
version = "1.0.5"
authors = ["Marco Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/theCapypara/configcrunch"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "configcrunch"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.9"
minijinja = { git = "https://github.com/theCapypara/minijinja.git", branch = "configcrunch", features = ["memchr"] }
path-absolutize = "3"
