[package]
name = "configcrunch"
version = "2.0.0"
authors = ["Marco Köpcke <hello@capypara.de>"]
edition = "2024"
repository = "https://github.com/theCapypara/configcrunch"
license = "MIT"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]
name = "configcrunch"

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
minijinja = "2"
path-absolutize = "3"
