[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "configcrunch"
version = "2.1.1"
description = "Configuration parser based on YAML-Files with support for variables, overlaying and hierarchies"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marco Köpcke", email = "hello@capypara.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "schema @ git+https://github.com/jeliebig/schema.git@json-schema-improvements"
]

[project.urls]
Repository = "https://github.com/theCapypara/configcrunch"
Documentation = "https://configcrunch.readthedocs.io"

[tool.setuptools.package-dir]
configcrunch = "configcrunch"

[[tool.setuptools-rust.ext-modules]]
target = "configcrunch._main"
